@@ -2985,9 +2985,10 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_ps_type_any)
     }
   else if (PKL_GEN_IN_CTX_P (PKL_GEN_CTX_IN_CONSTRUCTOR))
     {
-      /* This value is arbitrary... literally `any' value.. :D */
+      /* This value is arbitrary... literally `any' value that is
+         valid in a Poke program.  This excludes PVM_NULL.  */
       pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_DROP);
-      pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, PVM_NULL);
+      pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, pvm_make_int (0, 32));
     }
   else if (PKL_GEN_IN_CTX_P (PKL_GEN_CTX_IN_TYPE))
     pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, PVM_NULL);
