@@ -1,5 +1,12 @@
 2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.c (pkl_gen_ps_type_any): Construct a value 0 for
+	values of type `any'.
+	* testsuite/poke.pkl/scons-71.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
+2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-fold.c (OP_BINARY_OIO): Support units 0.
 	* testsuite/poke.pkl/mul-offsets-11.pk: New test.
 	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
